[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/EpisodeSelect.gd" type="Script" id=1]
[ext_resource path="res://UI/Abaddon_Bold_Large.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/button9patch.png" type="Texture" id=3]
[ext_resource path="res://UI/demo_preview.png" type="Texture" id=4]

[node name="EpisodeSelect" type="VBoxContainer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = -132.0
margin_right = 216.0
margin_bottom = 176.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EpisodeTitle" type="Label" parent="."]
margin_right = 176.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "Episode Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preview" type="TextureRect" parent="."]
margin_top = 34.0
margin_right = 176.0
margin_bottom = 134.0
rect_min_size = Vector2( 150, 100 )
texture = ExtResource( 4 )

[node name="Panel" type="NinePatchRect" parent="."]
margin_top = 138.0
margin_right = 176.0
margin_bottom = 238.0
rect_min_size = Vector2( 0, 100 )
texture = ExtResource( 3 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="MarginContainer" type="VBoxContainer" parent="Panel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 155.0
margin_bottom = 137.0
rect_min_size = Vector2( 135, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartEpisodeButton" type="Button" parent="Panel/MarginContainer"]
margin_right = 150.0
margin_bottom = 18.0
rect_min_size = Vector2( 150, 0 )
text = "Start Episode"

[node name="WaveSelectButtons" type="GridContainer" parent="Panel/MarginContainer"]
margin_top = 22.0
margin_right = 150.0
margin_bottom = 132.0
rect_min_size = Vector2( 140.805, 110 )
columns = 8

[node name="ArcadeModeButton" type="Button" parent="."]
margin_top = 242.0
margin_right = 176.0
margin_bottom = 260.0
text = "Arcade Mode"
[connection signal="pressed" from="Panel/MarginContainer/StartEpisodeButton" to="." method="_on_StartEpisodeButton_pressed"]
[connection signal="pressed" from="ArcadeModeButton" to="." method="_on_ArcadeModeButton_pressed"]
